<resources>
    <string name="app_name">Discover Localzz</string>
    <string name="title_discover">Entdecken</string>
    <string name="title_map">Karte</string>
    <string name="title_coupons">Gutscheine</string>
    <string name="title_location">Location</string>
    <string name="title_coupon">Rabatt</string>
    <string name="title_booking">Buchen</string>
    <string name="title_interests">Interessen</string>
    <string name="title_register">Registrieren</string>
    <string name="title_login">Anmelden</string>
    <string name="title_account">Mein Account</string>
    <string name="title_address">Adresse</string>

    <string name="my_data">Meine Daten</string>
    <string name="my_interests">Meine Interessen</string>
    <string name="my_reviews">Meine Bewertungen</string>>
    <string name="payment_details">Zahlungsdetails</string>
    <string name="coupons_history">eingelöste Gutscheine</string>
    <string name="imprint">Impressum</string>
    <string name="privacy_policy">Datenschutzerklärung</string>

    <string name="name">Vorname</string>
    <string name="surname">Nachname</string>
    <string name="birthdate">Geburtsdatum</string>
    <string name="mail">E-Mail</string>
    <string name="phone">Handynummer</string>
    <string name="password">Passwort</string>
    <string name="select_birthdate">Geburtsdatum auswählen</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="email_error">Ungültige E-Mail</string>
    <string name="forename_error">Vorname ist erforderlich</string>
    <string name="surname_error">Nachname ist erforderlich</string>
    <string name="birthdate_error">Geburtsdatum ist erforderlich</string>
    <string name="phone_error">Ungültige Handynummer</string>
    <string name="password_empty_error">Passwort ist erforderlich</string>
    <string name="passwords_do_not_match">Passwörter stimmen nicht überein</string>

    <string name="title">Titel</string>
    <string name="date">Datum</string>
    <string name="coupon">Rabatt</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>

<!--    TODO-->
    <string name="booking_title">Titel des Locations</string>
    <string name="booking_payment">Zahlungsmethode</string>
    <string name="booking_payment_card_number">••••%1$s</string>
    <string name="booking_payment_missing">Keine Zahlungsmethode</string>
    <string name="booking_payment_missing_message">Sie müssen eine Zahlungsmethode hinterlegen, um ein Ticket buchen zu können.</string>
    <string name="booking_info">Eine ausführliche Rechnung und das Ticket bekommst du im Anschluss per Mail zugesandt. Das Ticket ist auch jeder Zeit in der App abrufbar.</string>
    <string name="booking_fab">Kostenpflichtig bestellen</string>

    <string name="description">Beschreibung</string>
    <string name="organizer">Veranstalter</string>
    <string name="when">Wann?</string>
    <string name="available_until">Gültig bis</string>
    <string name="where">Wo?</string>
    <string name="what">Was?</string>
    <string name="coupon_info">Zeige diesen Code beim Einlass vor</string>
    <string name="coupon_cancel">Stornierung anfordern</string>
    <string name="ratings_title">Bewertungen</string>

    <string name="search_hint_discover">Entdecke deine Stadt</string>
    <string name="search_hint_map">Finde Locations in der Nähe</string>
    <string name="search_hint_coupons">Durchsuche deine Gutscheine</string>

    <string name="logout">Abmelden</string>
    <string name="logout_summary">Sind Sie sich sicher, dass Sie sich abmelden möchten?</string>

    <string name="delete_account">Account löschen</string>
    <string name="delete_account_summary">Sind Sie sich sicher, dass Sie Ihren Account löschen möchten? Ihre Daten werden zum nächst möglichen Zeitpunkt gelöscht. Dies kann nach Löschung der Daten nicht rückgängig gemacht werden. Geben Sie Ihr Passwort zur Bestätigung ein.</string>
    <string name="delete">Löschen</string>
    <string name="wrong_password">Falsches Passwort</string>
    <string name="account_deleted">Account gelöscht</string>

    <string name="scope">Außerhalb des Umfangs</string>
    <string name="scope_summary">Die Funktion, welche Sie versuchen aufzurufen, liegt nicht im Implementierungsumfang.</string>

<!--    TODO-->
    <string name="share">Teilen</string>
    <string name="google_login">Mit Google fortfahren</string>
    <string name="facebook_login">Mit Facebook fortfahren</string>
    <string name="guest_login">Als Gast fortfahren</string>
    <string name="register">Kein Account? Jetzt registrieren</string>
    <string name="reset_password">Passwort vergessen?</string>
    <string name="email_mobile_number">E-Mail / Handynummer</string>
    <string name="loading">Lädt</string>
    <string name="error_occurred">Ein Fehler ist aufgetreten</string>
    <string name="empty_list">Keine Ergebnisse gefunden</string>
    <string name="dummy_database">Dummy-Einträge</string>
    <string name="dummy_database_summary">Die Dummy-Datenbank wurde erfolgreich erstellt. Um auf die befüllte Datenbank zuzugreifen, ist es erforderlich, die Aktivität neu zu starten.</string>
    <string name="login_error">Ungültige Email/Handynummer oder Passwort</string>
    <string name="booking_login_required">Sie müssen angemeldet sein, um ein Ticket buchen zu können.</string>
    <string name="calendar_error">"Es ist keine Kalender-App installiert."</string>

    <string name="cancellation">Stornieren</string>
    <string name="cancellation_message">Möchten Sie Ihr Gutschein wirklich stornieren? Bitte geben Sie einen Grund an.</string>
    <string name="reason">Grund</string>

    <string name="forgot_password">Passwort vergessen</string>
    <string name="forgot_password_message">Geben Sie Ihre E-Mail oder Ihre Handynummer ein. Falls ein Account mit den angegebenen Daten existiert erhalten Sie eine Nachricht mit Schritten zum Zurücksetzen Ihres Passworts. </string>
    <string name="request">Anfordern</string>

    <string name="edit_data_hint">Tippe auf eine Eigenschaft um sie zu ändern.</string>

    <string name="card_number">Kartennummer</string>
    <string name="month">Monat</string>
    <string name="year">Jahr</string>
    <string name="cvc">CVC</string>
    <string name="delete_payment_details">Zahlungsdetails löschen</string>
    <string name="delete_payment_details_message">Sind Sie sich sicher, dass Sie Ihre Zahlungsdetails löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="invalid">Ungültig</string>

    <string name="password_placeholder">••••••••</string>
    <string name="currency_format">%1$s €</string>
    <string name="vat_format">%1$s inkl. MwSt.</string>
    <string name="summary_format">%1$s</string>
    <string name="start_format">%1$s am %2$s</string>
    <string name="address_format">%1$s %2$s, %3$s %4$s</string>
</resources>
