<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.ebusiness.discoverlocalzz.fragments.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.ebusiness.discoverlocalzz.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_coupons"
        android:name="com.ebusiness.discoverlocalzz.fragments.CouponsFragment"
        android:label="@string/title_coupons"
        tools:layout="@layout/fragment_coupons" />
</navigation>